feat: 添加回复消息的 API 端点及请求结构
