# api/docs/swagger.yaml
@@ -1,5 +1,24 @@
 basePath: /api
 definitions:
+  api.ReplyMessageRequest:
+    properties:
+      chat_id:
+        description: 聊天ID
+        example: 123456789
+        type: integer
+      message_id:
+        description: 消息ID
+        example: 987654321
+        type: integer
+      text:
+        description: 回复内容
+        example: This is a reply message
+        type: string
+    required:
+    - chat_id
+    - message_id
+    - text
+    type: object
   api.SearchHit:
     properties:
       _formatted:
@@ -158,6 +177,55 @@ info:
   title: BTTS API
   version: "1.0"
 paths:
+  /client/reply:
+    post:
+      consumes:
+      - application/json
+      description: 向指定聊天中的指定消息发送回复
+      parameters:
+      - description: 回复消息请求参数
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/api.ReplyMessageRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: 成功响应示例
+          schema:
+            properties:
+              data:
+                type: object
+              message:
+                type: string
+              status:
+                type: string
+            type: object
+        "400":
+          description: 请求参数错误
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "401":
+          description: 未授权
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "500":
+          description: 服务器内部错误
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: 回复指定消息
+      tags:
+      - Client
   /index/{chat_id}:
     get:
       consumes:
